Updated outcome data section, and changed title of website

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Design Archive</title>
+    <title>The Digital Literacy Project</title>
     <style>
         :root {
             --primary-blue: #0000FF; 
@@ -625,9 +625,9 @@
                     "emphasize": {
                         "title": "Completion & Quantitative Metrics:",
                         "points": [
-                            "92% Program Completion Rate (46 out of 50 initial enrollees)",
-                            "78% Increase in Foundational Proficiency (Measured via task-based assessments)",
-                            "85% Post-Training Digital Independence (Learners no longer require 3rd party help)"
+                            "58% Program Completion Rate (17 out of 29 initial enrollees)",
+                            "70% Increase in Foundational Proficiency (Measured via task-based assessments)",
+                            "49% Post-Training Digital Independence (Learners no longer require 3rd party help)"
                         ]
                     }
                 },
